<?xml version="1.0" encoding="utf-8"?>


<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context="com.exemple.tetris.view.MenuActivity">


    <TextView
        android:layout_marginTop="60sp"
        android:textSize="75sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tetris"
        android:fontFamily="casual"
        android:textColor="@android:color/holo_red_light"/>

        <Button
        android:id="@+id/newGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novo_jogo"
            android:textSize="25sp"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:textColor="@android:color/black"
            android:layout_marginBottom="15sp"/>
    <Button
        android:id="@+id/resumeGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:textSize="25sp"
        android:background="@android:color/transparent"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15sp"/>
    <Button
        android:id="@+id/configGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configura_es"
        android:textSize="25sp"
        android:background="@android:color/transparent"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:layout_marginBottom="25sp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tetris256"
        android:contentDescription="@string/todo" />


</androidx.appcompat.widget.LinearLayoutCompat>



